trunk/Archive2/74/2cb7607eecb222/output
main.cpp:6:35: error: 'foo' declared as function returning a function
 int (*(*(*foo)(const void *)()))[3];
                                   ^
main.cpp: In function 'int main()':
main.cpp:13:11: warning: unused variable 'c' [-Wunused-variable]
     Foo (*c)[7];
           ^
